# hdl-compiler

./: .gitmodules  CMakeLists.txt  Cargo.toml  README.md
examples/: adder.hdl  alu.hdl
src/: CMakeLists.txt  ast.rs  char_reader.rs  expression_type.rs  lexer.rs  lib.rs  main.c  main.cpp  main.rs  parser.rs  semantic_analyzer.rs  symbol.rs  symbol_table.rs
src/backend/: CMakeLists.txt  error.rs  logic_simulator.rs  main.c  mod.rs
src/backend/LogicSimulator/: CMakeLists.txt  LogicSimulator.cpp  LogicSimulator.h  backend_LogicSimulator.c  backend_LogicSimulator.h  main.c
src/backend/linker/: CMakeLists.txt  main.c
src/frontend/: AST.cpp  AST.h  CMakeLists.txt  ExpressionResultType.cpp  ExpressionResultType.h  Frontend.cpp  Frontend.h  IntermediateGenerator.cpp  IntermediateGenerator.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  TypeSymbol.cpp  TypeSymbol.h  analyzer.c  analyzer.h  ast.c  ast.h  ast.rs  cache.rs  char_reader.rs  expression_type.c  expression_type.h  expression_type.rs  ext_char.rs  frontend.c  frontend.h  intermediate_generator.c  intermediate_generator.h  intermediate_generator.rs  lexer.c  lexer.h  lexer.rs  (+14 more)
src/helper/: buffer.h  log.h  mem.c  mem.h
src/linker/: CMakeLists.txt  Linker.cpp  Linker.h  linker.c  linker.h  mod.rs
src/shared/: CMakeLists.txt  Intermediate.cpp  Intermediate.h  IntermediateFile.cpp  IntermediateFile.h  error.rs  errors.cpp  errors.h  intermediate.c  intermediate.h  intermediate.rs  intermediate_file.c  intermediate_file.h  mod.rs
src/shared/helper/: BufferHelper.h  CMakeLists.txt  StackTraceError.cpp  StackTraceError.h  buffer.h  hashtable.c  hashtable.h  mem.c  mem.h  stacktrace.cpp  stacktrace.h  string_format.h
test/: adder_8bit.hdl  expr.hdl  sim.c  test.hdl  test.hdli
test/alu/: adder.hdl  main.hdl
